Adding more up to date resume

--- a/Daniel-Wierdsma-Resume.tex
+++ b/Daniel-Wierdsma-Resume.tex
@@ -112,8 +112,20 @@
         \color{em-light}\textbf{\\[-5pt]{\firamedium Work Experience}\\[-15pt]}
     \end{LARGE}
 
-    \textbf{{\firamedium DevOps Engineer at \textit{Tulip Retail}}}{\color{darkgrey}\hfill{\small{January 2019 to April 2020\\[5pt]}}
-        While on the Operations Team at Tulip I spearheaded multiple initiatives, including: Designed an SFTP Automation Framework leveraging AWS, built CI/CD frameworks for internal projects that automatically tests \& deploys new changes, participated in a monthly on-call rotation to triage \& fix tickets that affected critical services, and set up a monitoring solution on GCP to monitor all of our services through the use of Prometheus, Thanos, Alertmanager, and Grafana. Created new metrics exporters and dashboards to receive more information around Tulip's systems and configured alerts based upon them.\\[-10pt]
+    \textbf{{\firamedium DevOps Engineer at \textit{Tulip Retail}}}{\color{darkgrey}
+    \hfill{\small{January 2019 to Present\\[5pt]}} 
+    \begin{tabularx}{\textwidth}{llX} 
+        \color{em-light} \faGenderless\space\space  \color{darkgrey}{Designed and built an SFTP Automation Framework leverging AWS services to remove manual configuration} & \\ [5pt]
+        \color{em-light} \faGenderless\space\space  \color{darkgrey}{Participated in monthly on-call rotation to traige \& fix tickets that affect critical services} & \\ [5pt]
+        \color{em-light} \faGenderless\space\space  \color{darkgrey}{Built CI/CD frameworks for internal projects that automatically tests and deploys new changes} & \\ [5pt]
+        \color{em-light} \faGenderless\space\space  \color{darkgrey}{Setup monitoring solution of GCP services through use of Prometheus, Thanos, Grafana, and Alertmanager} & \\ [5pt]
+        \color{em-light} \faGenderless\space\space  \color{darkgrey}{Developed new metric exporters \& dashboards to receive more granular information around Tulip's internal systems, and configured alerts for them.} & \\ [5pt]
+        \color{em-light} \faGenderless\space\space  \color{darkgrey}{Participated in War Room level events to aid in quickly solving high priority outages.} & \\ [5pt]
+        \color{em-light} \faGenderless\space\space  \color{darkgrey}{Created CI/CD framework for current and all future serverless applications through use of GitlabCI.} & \\ [5pt]
+        \color{em-light} \faGenderless\space\space  \color{darkgrey}{Assisted with migration of customers to GCP while quickly debugging issues in brand new infrastructure.} & \\ [5pt]
+        \color{em-light} \faGenderless\space\space  \color{darkgrey}{Reviewed candidates and conducted interviews for the hiring of potential team members.} & \\ [5pt]
+    \end{tabularx}\\[-10pt]
+    
     }
 
     \textbf{{\firamedium Conference Speaker at \textit{AWS Summit Toronto 2019}}}{\color{darkgrey}\hfill{\small{October 2019\\[5pt]}}
