Adding better resume stuff

--- a/Daniel-Wierdsma-Resume.tex
+++ b/Daniel-Wierdsma-Resume.tex
@@ -113,27 +113,32 @@
     \end{LARGE}
 
     \textbf{{\firamedium DevOps Engineer at \textit{Tulip Retail}}}{\color{darkgrey}
-    \hfill{\small{January 2019 to Present\\[5pt]}} 
-    \begin{tabularx}{\textwidth}{llX} 
-        \color{em-light} \faGenderless\space\space  \color{darkgrey}{Designed and built an SFTP Automation Framework leverging AWS services to remove manual configuration} & \\ [5pt]
-        \color{em-light} \faGenderless\space\space  \color{darkgrey}{Participated in monthly on-call rotation to traige \& fix tickets that affect critical services} & \\ [5pt]
-        \color{em-light} \faGenderless\space\space  \color{darkgrey}{Built CI/CD frameworks for internal projects that automatically tests and deploys new changes} & \\ [5pt]
-        \color{em-light} \faGenderless\space\space  \color{darkgrey}{Setup monitoring solution of GCP services through use of Prometheus, Thanos, Grafana, and Alertmanager} & \\ [5pt]
-        \color{em-light} \faGenderless\space\space  \color{darkgrey}{Developed new metric exporters \& dashboards to receive more granular information around Tulip's internal systems, and configured alerts for them.} & \\ [5pt]
-        \color{em-light} \faGenderless\space\space  \color{darkgrey}{Participated in War Room level events to aid in quickly solving high priority outages.} & \\ [5pt]
-        \color{em-light} \faGenderless\space\space  \color{darkgrey}{Created CI/CD framework for current and all future serverless applications through use of GitlabCI.} & \\ [5pt]
-        \color{em-light} \faGenderless\space\space  \color{darkgrey}{Assisted with migration of customers to GCP while quickly debugging issues in brand new infrastructure.} & \\ [5pt]
-        \color{em-light} \faGenderless\space\space  \color{darkgrey}{Reviewed candidates and conducted interviews for the hiring of potential team members.} & \\ [5pt]
+    \hfill{\small{January 2019 to Present\\[-5pt]}} 
+    \begin{tabularx}{\textwidth}{lp{16cm}X} 
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Designed and built an SFTP Automation Framework leverging AWS services to remove manual configuration.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Participated in monthly on-call rotation to triage \& fix tickets that affect critical services.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Built CI/CD frameworks for internal projects that automatically tests and deploys new changes.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Setup monitoring solution of GCP services through use of Prometheus, Thanos, Grafana, and Alertmanager.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Developed new metric exporters \& dashboards to receive more granular information around Tulip's internal systems, and configured alerts for them.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Participated in War Room level events to aid in quickly solving high priority outages.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Created CI/CD framework for current and all future serverless applications through use of GitlabCI.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Assisted with migration of customers to GCP while quickly debugging issues in new infrastructure.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Reviewed candidates and conducted interviews for the hiring of potential team members.} & \\ [-5pt]
     \end{tabularx}\\[-10pt]
-    
     }
 
-    \textbf{{\firamedium Conference Speaker at \textit{AWS Summit Toronto 2019}}}{\color{darkgrey}\hfill{\small{October 2019\\[5pt]}}
-        As a conference speaker in the Start-up Booth at AWS Summit Toronto 2019 I presented my SFTP Automation design that solves the problem of manual easing work on existing SFTP Virtual Machine instances. It achieves this through leveraging many tools such as Transfer for AWS, Lambdas, DynamoDB, and SQS functionality (Designs and architecture are available on my Github as open source)\\[-10pt]
+    \textbf{{\firamedium Conference Speaker at \textit{AWS Summit Toronto 2019}}}{\color{darkgrey}\hfill{\small{October 2019\\[2pt]}}
+        As a conference speaker in the Start-up Booth at AWS Summit Toronto 2019 I presented my SFTP Automation design that solves the problem of manual easing work on existing SFTP Virtual Machine instances. It achieves this through leveraging many tools such as Transfer for AWS, Lambdas, DynamoDB, and SQS functionality (Designs and architecture are available on my Github as open source).\\[-15pt]
     }
 
-    \textbf{{\firamedium DevOps Engineer (Co-op) at \textit{Tulip Retail}}}{\color{darkgrey}\hfill{\small{August 2017 to September 2018\\[5pt]}}
-        \\[-10pt]
+    \textbf{{\firamedium DevOps Engineer (Co-op) at \textit{Tulip Retail}}}{\color{darkgrey}\hfill{\small{August 2017 to September 2018\\[-5pt]}}
+        \begin{tabularx}{\textwidth}{lp{16cm}X} 
+            & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Participated in monthly on-call rotation to triage \& fix tickets that affect critical services.} & \\ [-5pt]
+            & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Designed and developed a RESTful API that was used in tandem with a Tyk Gateway for service discovery.} & \\ [-5pt]
+            & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Architected new processes to set up and add new Jenkins worker servers hosted on AWS EC2 instances.} & \\ [-5pt]
+            & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Researched alternative service discovery tools for AWS ECS clusters to remove unused containers and spin up new ones as needed.} & \\ [-5pt]
+            & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Aided in creating framework around spinning up new docker containers to run Oauth2 Proxy on any new web servers that may require it.} & \\ 
+        \end{tabularx}\\[-10pt]
     }
 
     \textbf{{\firamedium IT Security Analyst at \textit{Fundserv Inc.}}}{\color{darkgrey}\hfill{\small{January 2018 to April 2018\\[-20pt]}}
