Adding better resume

--- a/Daniel-Wierdsma-Resume.tex
+++ b/Daniel-Wierdsma-Resume.tex
@@ -88,22 +88,23 @@
 {
     %%Begin%% Programming
     \begin{LARGE}
-        \color{em-light}\textbf{\\[-15pt]{\firamedium Development Experience}\\[-10pt]}
+        \color{em-light}\textbf{\\[-15pt]{\firamedium Development Experience}\\[-15pt]}
     \end{LARGE}
 
     \begin{tabularx}{\textwidth}{llX}
     \faDesktop\space\space{\bfseries {\firamedium Back End}}
-        & {\color{darkgrey} \textbullet\space\space Python, Go, Node.js, PHP, Ruby, C++, Java} & \\[10pt]
+        & {\color{darkgrey} \textbullet\space\space Python, Go, Node.js, PHP, Ruby, C++, Java} & \\[5pt]
     \faDatabase\space\space{\bfseries {\firamedium Databases}}
-        & {\color{darkgrey} \textbullet\space\space RDS, Aurora, CloudSQL, MySQL, DynamoDB, Redis, Beanstalkd} & \\[10pt]
+        & {\color{darkgrey} \textbullet\space\space RDS, Aurora, CloudSQL, MySQL, DynamoDB, Redis, Memcached, Beanstalkd} & \\[5pt]
     \faCogs\space\space{\bfseries {\firamedium DevOps Tools}}       
-        & {\color{darkgrey} \textbullet\space\space Make, Bash, Git, Jenkins, Gitlab CI, NGINX, Apache, Chef, Serverless Framework} & \\[5pt]
-        & {\color{darkgrey} \textbullet\space\space Docker, Kubernetes, Terraform, Helm, Istio, Prometheus, Thanos, Grafana, AlertManager} & \\[10pt]
+        & {\color{darkgrey} \textbullet\space\space Make, Bash, Git, Jenkins, Gitlab CI, NGINX, Apache, Chef, DataDog, Serverless Framework} & \\[2pt]
+        & {\color{darkgrey} \textbullet\space\space Docker, Kubernetes, Terraform, Helm, Istio, Prometheus, Thanos, Grafana, AlertManager} & \\[5pt]
     \faLinux\space\space{\bfseries {\firamedium Environments}}       
-        & {\color{darkgrey} \textbullet\space\space AWS: EC2, ECS, CloudFormation, Route53, S3, Lambda, CloudWatch, Lambda, etc.} & \\[5pt]
-        & {\color{darkgrey} \textbullet\space\space GCP: GKE, KMS, Cloud Storage, StackDriver, Compute Engine, Pub-Sub, etc.} & \\[5pt] 
-        & {\color{darkgrey} \textbullet\space\space GNU/Linux (Ubuntu, Alpine, CentOS), Windows, MacOS} & \\[10pt]
-    \faBook\space\space{\bfseries {\firamedium Fundamentals}}      & {\color{darkgrey} \textbullet\space\space Microservices, Serverless Applications, Mob \& Pair Programming, Agile Development, CI/CD} & \\[10pt]
+        & {\color{darkgrey} \textbullet\space\space AWS: EC2, ECS, CloudFormation, Route53, S3, Lambda, CloudWatch, Lambda, etc.} & \\[2pt]
+        & {\color{darkgrey} \textbullet\space\space GCP: GKE, KMS, Cloud Storage, StackDriver, Compute Engine, Pub-Sub, etc.} & \\[2pt] 
+        & {\color{darkgrey} \textbullet\space\space GNU/Linux (Ubuntu, Alpine, CentOS), Windows, MacOS} & \\[5pt]
+    \faBook\space\space{\bfseries {\firamedium Fundamentals}}      
+        & {\color{darkgrey} \textbullet\space\space Microservices, Serverless Applications, Mob \& Pair Programming, Agile Development, CI/CD} & \\[10pt]
     \end{tabularx}
     %%End%% Programming
     %%Begin%% Experience
@@ -113,31 +114,34 @@
     \end{LARGE}
 
     \textbf{{\firamedium DevOps Engineer at \textit{Tulip Retail}}}{\color{darkgrey}
-    \hfill{\small{January 2019 to Present\\[-5pt]}} 
+    \hfill{\small{January 2019 to April 2020\\[-5pt]}} 
     \begin{tabularx}{\textwidth}{lp{16cm}X} 
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Designed and built an SFTP Automation Framework leverging AWS services to remove manual configuration.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Upgraded existing Terraform resources from v0.11 to v0.12.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Maintained over one thousand AWS services including EC2, ECS, Route53, Cloudformation.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Participated in monthly on-call rotation to triage \& fix tickets that affect critical services.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Built CI/CD frameworks for internal projects that automatically tests and deploys new changes.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Setup monitoring solution of GCP services through use of Prometheus, Thanos, Grafana, and Alertmanager.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Setup monitoring solution of GCP services leveraging Prometheus, Thanos, Grafana, and Alertmanager.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Developed new metric exporters \& dashboards to receive more granular information around Tulip's internal systems, and configured alerts for them.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Participated in War Room level events to aid in quickly solving high priority outages.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Created CI/CD framework for current and all future serverless applications through use of GitlabCI.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Assisted with migration of customers to GCP while quickly debugging issues in new infrastructure.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Reviewed candidates and conducted interviews for the hiring of potential team members.} & \\ [-5pt]
-    \end{tabularx}\\[-10pt]
+        & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Reviewed candidates and conducted interviews for the hiring of potential team members.} & \\ [-10pt]
+    \end{tabularx}\\
     }
 
-    \textbf{{\firamedium Conference Speaker at \textit{AWS Summit Toronto 2019}}}{\color{darkgrey}\hfill{\small{October 2019\\[2pt]}}
-        As a conference speaker in the Start-up Booth at AWS Summit Toronto 2019 I presented my SFTP Automation design that solves the problem of manual easing work on existing SFTP Virtual Machine instances. It achieves this through leveraging many tools such as Transfer for AWS, Lambdas, DynamoDB, and SQS functionality (Designs and architecture are available on my Github as open source).\\[-15pt]
+    \textbf{{\firamedium Conference Speaker at \textit{AWS Summit Toronto 2019}}}{\color{darkgrey}\hfill{\small{October 2019\\[5pt]}}
+    \begin{tabularx}{\textwidth}{lp{16cm}X} 
+        & As a conference speaker in the Start-up Booth at AWS Summit Toronto 2019 I presented my SFTP Automation design that solves the problem of manual easing work on existing SFTP Virtual Machine instances. This was achieved by leveraging many tools such as Transfer for AWS, Lambdas, DynamoDB, and SQS functionality (Designs and architecture are available on my Github as open source). & \\[-10pt]
+    \end{tabularx}\\
     }
 
     \textbf{{\firamedium DevOps Engineer (Co-op) at \textit{Tulip Retail}}}{\color{darkgrey}\hfill{\small{August 2017 to September 2018\\[-5pt]}}
         \begin{tabularx}{\textwidth}{lp{16cm}X} 
-            & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Participated in monthly on-call rotation to triage \& fix tickets that affect critical services.} & \\ [-5pt]
             & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Designed and developed a RESTful API that was used in tandem with a Tyk Gateway for service discovery.} & \\ [-5pt]
             & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Architected new processes to set up and add new Jenkins worker servers hosted on AWS EC2 instances.} & \\ [-5pt]
-            & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Researched alternative service discovery tools for AWS ECS clusters to remove unused containers and spin up new ones as needed.} & \\ [-5pt]
-            & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Aided in creating framework around spinning up new docker containers to run Oauth2 Proxy on any new web servers that may require it.} & \\ 
+            & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Researched alternative service discovery tools for AWS ECS clusters to aid in autoscaling our services.} & \\ [-5pt]
+            & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Aided in creating a framework around spinning up new docker containers to run Oauth2 Proxy on any new web servers that may require it.} & \\ 
         \end{tabularx}\\[-10pt]
     }
 
@@ -153,8 +157,11 @@
         \color{em-light}\textbf{\\[-5pt]{\firamedium Education}\\[-15pt]}
     \end{LARGE}
 
-    \textit{\textbf{{\firamedium University of Waterloo}}}{\color{darkgrey}{\hfill{\small{Graduated in 2018\\[5pt]}}
-    Bachelor of Computer Science, Software Engineering (Co-op)}}
+    \textit{\textbf{{\firamedium University of Waterloo}}}{\color{darkgrey}{\hfill{\small{Graduated in 2018\\[0pt]}}
+    Bachelor of Computer Science, Computer Science, Honours, Co-operative Program}\\[-20pt]}
+    
+    \textit{\textbf{{\firamedium Currently Reading}}}{\color{darkgrey}\\[0pt]
+    {\textit{Pheonix Project}} by G. Kim, {\textit{Pragmatic Programmer}} by A. Hunt \& D. Thomas, and {\textit{Clean Architecture}} by R.C. Martin}
     %%End%% Education
 }
 %%End%% Body
