Adding a slight wording change to AWS tag

--- a/Daniel-Wierdsma-Resume.tex
+++ b/Daniel-Wierdsma-Resume.tex
@@ -118,7 +118,7 @@
     \begin{tabularx}{\textwidth}{lp{16cm}X} 
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Designed and built an SFTP Automation Framework leverging AWS services to remove manual configuration.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Upgraded existing Terraform resources from v0.11 to v0.12.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Maintained over one thousand AWS services including EC2, ECS, Route53, Cloudformation.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Maintained over one thousand AWS resources including EC2, ECS, Route53, Cloudformation services.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Participated in monthly on-call rotation to triage \& fix tickets that affect critical services.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Built CI/CD frameworks for internal projects that automatically tests and deploys new changes.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Setup monitoring solution of GCP services leveraging Prometheus, Thanos, Grafana, and Alertmanager.} & \\ [-5pt]
