Adding updated resume

--- a/Daniel-Wierdsma-Resume.tex
+++ b/Daniel-Wierdsma-Resume.tex
@@ -117,22 +117,20 @@
     \hfill{\small{January 2019 to April 2020\\[-5pt]}} 
     \begin{tabularx}{\textwidth}{lp{16cm}X} 
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Designed and built an SFTP Automation Framework leverging AWS services to remove manual configuration.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Upgraded existing Terraform resources from v0.11 to v0.12.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Upgraded over 50 existing Terraform modules and blueprints from v0.11 to v0.12 in order to ease load on Gitlab servers by moving resources to GCS.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Maintained over one thousand AWS resources including EC2, ECS, Route53, Cloudformation services.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Participated in monthly on-call rotation to triage \& fix tickets that affect critical services.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Built CI/CD frameworks for internal projects that automatically tests and deploys new changes.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Built CI/CD frameworks for internal projects and all serverless applications through use of Gitlab CI that automatically tests and deploys new changes.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Setup monitoring solution of GCP services leveraging Prometheus, Thanos, Grafana, and Alertmanager.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Developed new metric exporters \& dashboards to receive more granular information around Tulip's internal systems, and configured alerts for them.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Developed new metric exporters \& dashboards to receive more granular information around Tulip's internal systems, and configured alerts to warn teams of potential outages across the system.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Participated in War Room level events to aid in quickly solving high priority outages.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Created CI/CD framework for current and all future serverless applications through use of GitlabCI.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Assisted with migration of customers to GCP while quickly debugging issues in new infrastructure.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Reviewed candidates and conducted interviews for the hiring of potential team members.} & \\ [-10pt]
+        & \color{em-light} \faGenderless\space\space  \color{darkgrey}{Worked on migration of customers to GCP while quickly debugging issues in new infrastructure.} & \\ [-10pt]
     \end{tabularx}\\
     }
 
     \textbf{{\firamedium Conference Speaker at \textit{AWS Summit Toronto 2019}}}{\color{darkgrey}\hfill{\small{October 2019\\[5pt]}}
     \begin{tabularx}{\textwidth}{lp{16cm}X} 
-        & As a conference speaker in the Start-up Booth at AWS Summit Toronto 2019 I presented my SFTP Automation design that solves the problem of manual easing work on existing SFTP Virtual Machine instances. This was achieved by leveraging many tools such as Transfer for AWS, Lambdas, DynamoDB, and SQS functionality (Designs and architecture are available on my Github as open source). & \\[-10pt]
+        & As a conference speaker in the Start-up Booth at AWS Summit Toronto 2019 I presented my \textbf{SFTP Automation design} that solves the problem of manual easing work on existing SFTP Virtual Machine instances. This was achieved by leveraging many tools such as Transfer for AWS, Lambdas, DynamoDB, and SQS functionality (Designs and architecture are available on my Github as open source). & \\[-10pt]
     \end{tabularx}\\
     }
 
