--- a/Daniel-Wierdsma-Resume.tex
+++ b/Daniel-Wierdsma-Resume.tex
@@ -97,7 +97,7 @@
     \faDatabase\space\space{\bfseries {\firamedium Databases}}
         & {\color{darkgrey} \textbullet\space\space MongoDB, RDS, CloudSQL, MySQL, DynamoDB, Redis, RabbitMQ} & \\[5pt]
     \faCogs\space\space{\bfseries {\firamedium DevOps Tools}}    
-        & {\color{darkgrey} \textbullet\space\space Bash, Git, Jenkins, Github Actions, NGINX, Splunk, Prometheus, Grafana, Service Mesh (Istio, Linkerd)} & \\[2pt]
+        & {\color{darkgrey} \textbullet\space\space Bash, Git, Jenkins, Github Actions, NGINX, Splunk, Prometheus, Grafana, Istio, Linkerd} & \\[2pt]
         & {\color{darkgrey} \textbullet\space\space Kubernetes, Cloudflare, Terraform, Helmfile, ArgoCD, KinD, Skaffold, Jenkins, NGINX, Docker} & \\[5pt]
     \faLinux\space\space{\bfseries {\firamedium Environments}}       
         & {\color{darkgrey} \textbullet\space\space AWS: EC2, ECS, VPC, Route53, S3, Lambda, Cloudformation, etc.} & \\[2pt]
