--- a/Daniel-Wierdsma-Resume.tex
+++ b/Daniel-Wierdsma-Resume.tex
@@ -93,18 +93,18 @@
 
     \begin{tabularx}{\textwidth}{llX}
     \faDesktop\space\space{\bfseries {\firamedium Back End}}
-        & {\color{darkgrey} \textbullet\space\space Python, Node.js, PHP, Go} & \\[5pt]
+        & {\color{darkgrey} \textbullet\space\space Python, Go, Node.js} & \\[5pt]
     \faDatabase\space\space{\bfseries {\firamedium Databases}}
-        & {\color{darkgrey} \textbullet\space\space MongoDB, RDS, CloudSQL, MySQL, DynamoDB, Redis, RabbitMQ} & \\[5pt]
-    \faCogs\space\space{\bfseries {\firamedium DevOps Tools}}    
-        & {\color{darkgrey} \textbullet\space\space Bash, Git, Jenkins, Github Actions, NGINX, Splunk, Prometheus, Grafana, Istio, Linkerd} & \\[2pt]
-        & {\color{darkgrey} \textbullet\space\space Kubernetes, Cloudflare, Terraform, Helmfile, ArgoCD, KinD, Skaffold, Jenkins, NGINX, Docker} & \\[5pt]
-    \faLinux\space\space{\bfseries {\firamedium Environments}}       
-        & {\color{darkgrey} \textbullet\space\space AWS: EC2, ECS, VPC, Route53, S3, Lambda, Cloudformation, etc.} & \\[2pt]
+        & {\color{darkgrey} \textbullet\space\space RDS, MongoDB, PostgreSQL, MySQL, CloudSQL, DynamoDB, Redis} & \\[5pt]
+    \faCogs\space\space{\bfseries {\firamedium DevOps Tools}}
+        & {\color{darkgrey} \textbullet\space\space Bash, Git, Prometheus, Thanos, Grafana, Loki, Tempo, Istio, GitLab CI, Github Actions, NGINX} & \\[2pt]
+        & {\color{darkgrey} \textbullet\space\space Kubernetes, Docker, ArgoCD, Cloudflare, Terraform, Helm, kOps, Teleport, Skaffold, KinD} & \\[5pt]
+    \faLinux\space\space{\bfseries {\firamedium Environments}}
+        & {\color{darkgrey} \textbullet\space\space AWS: EC2, EKS, ECS, VPC, IAM, Route53, S3, Lambda, Cloudformation, etc.} & \\[2pt]
         & {\color{darkgrey} \textbullet\space\space Azure: AKS, ABS, DNS, Azure Cache for Redis, etc.} & \\[2pt]
         & {\color{darkgrey} \textbullet\space\space GCP: GKE, KMS, GCS, StackDriver, GCE, Pub-Sub, etc.} & \\[2pt]
-    \faBook\space\space{\bfseries {\firamedium Fundamentals}}      
-        & {\color{darkgrey} \textbullet\space\space Microservices, Serverless Applications, Mob \& Pair Programming, Agile Development, CI/CD} & \\[10pt]
+    \faBook\space\space{\bfseries {\firamedium Fundamentals}}
+        & {\color{darkgrey} \textbullet\space\space Microservices, GitOps, CI/CD, Serverless Applications, Agile Development} & \\[10pt]
     \end{tabularx}
     %%End%% Programming
     %%Begin%% Experience
@@ -113,28 +113,35 @@
         \color{em-light}\textbf{\\[-5pt]{\firamedium Work Experience}\\[-15pt]}
     \end{LARGE}
 
+    \textbf{{\firamedium Site Reliability Engineer II at \textit{Mattermost}}}{\color{darkgrey}
+    \hfill{\small{May 2022 to May 2023\\[-5pt]}} 
+    \begin{tabularx}{\textwidth}{lp{16cm}X} 
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Rearchitected Mattermost production services to be managed in a fully GitOps way with ArgoCD.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Upgraded and maintained select Mattermost services such as Teleport, Cluster Autoscaler, and ArgoCD.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Productionalized Mattermost's Community installation to be more reliable, observable, and maintainable.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Maintained over 10,000 production Mattermost installations within Kubernetes. } & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Led discussions on how to turn internal tools to be more cloud-native and host them within Kubernetes environments.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Participated in a weekly on-call rotation to respond to production level alerts and quickly resolve issues.} & \\ [-10pt]
+    \end{tabularx}\\
+    }
+
     \textbf{{\firamedium DevOps Engineer at \textit{Daylight}}}{\color{darkgrey}
-    \hfill{\small{May 2020 to Present\\[-5pt]}} 
+    \hfill{\small{May 2020 to May 2022\\[-5pt]}} 
     \begin{tabularx}{\textwidth}{lp{16cm}X} 
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Planned migration of AWS services to Azure-hosted Kubernetes for all Daylight environments.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Designed architecture and deployment strategies for new Kubernetes environments.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Created new environment for Shoppers Drug Mart Covid testing and vaccination forms to handle heavy load.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Implemented local kubernetes development environment using Skaffold and KinD.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Implemented and supported a new environment for Shoppers Drug Mart Covid-19 testing and vaccination forms to handle heavy load.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Migrated existing cloudformation troposphere scripts to Terraform to manage all new environments.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Maintained existing, and created new AWS-hosted environments with resources including EC2, ECS, VPC, Route53, Cloudfront services.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Teaching and promoting DevOps practices to development teams to create a true DevOps culture.} & \\ [-10pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Maintained existing, and created new AWS-hosted environments with resources including EC2, ECS, VPC, Route53, Cloudfront services.} & \\ [-10pt]
     \end{tabularx}\\
     }
 
     \textbf{{\firamedium DevOps Engineer at \textit{Tulip Retail}}}{\color{darkgrey}
     \hfill{\small{January 2019 to April 2020\\[-5pt]}} 
     \begin{tabularx}{\textwidth}{lp{16cm}X} 
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Designed and built an SFTP Automation Framework leverging AWS services to remove manual configuration.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Participated in monthly on-call rotation to triage \& fix tickets that affect critical services.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Built CI/CD frameworks for internal projects and all serverless applications through use of Gitlab CI that automatically tests and deploys new changes.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Built CI/CD frameworks for internal projects and all serverless applications through use of GitLab CI that automatically tests and deploys new changes.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Setup monitoring solution of GCP services leveraging Prometheus, Thanos, Grafana, and Alertmanager.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Developed new metric exporters \& dashboards to receive more granular information around Tulip's internal systems, and configured alerts to warn teams of potential outages across the system.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Worked on migration of customers to GCP while quickly debugging issues in new infrastructure.} & \\ [-10pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Developed new metric exporters \& dashboards to receive more granular information around Tulip's internal systems, and configured alerts to warn teams of potential outages across the system.} & \\ [-10pt]
     \end{tabularx}\\
     }
 
@@ -144,14 +151,11 @@
     \end{tabularx}\\
     }
 
-    \textbf{{\firamedium DevOps Engineer (Co-op) at \textit{Tulip Retail}}}{\color{darkgrey}\hfill{\small{August 2017 to September 2018\\[-5pt]}}
-    }
-
     %%End%% Experience
     %%Begin%% Education
-    {\color{lightgrey}{\centerline{\rule{17cm}{0.4pt}}}}
+    {\color{lightgrey}{\centerline{\rule{17cm}{0.1pt}}}}
     \begin{LARGE}
-        \color{em-light}\textbf{\\[-5pt]{\firamedium Education}\\[-15pt]}
+        \color{em-light}\textbf{\\[-15pt]{\firamedium Education}\\[-15pt]}
     \end{LARGE}
 
     \textit{\textbf{{\firamedium University of Waterloo}}}{\color{darkgrey}{\hfill{\small{Graduated in 2018\\[0pt]}}
