--- a/Daniel-Wierdsma-Resume.tex
+++ b/Daniel-Wierdsma-Resume.tex
@@ -93,18 +93,18 @@
 
     \begin{tabularx}{\textwidth}{llX}
     \faDesktop\space\space{\bfseries {\firamedium Back End}}
-        & {\color{darkgrey} \textbullet\space\space Python, Go, Node.js} & \\[5pt]
+        & {\color{darkgrey} \textbullet\space\space Python, Go, Node.js, PHP} & \\[5pt]
     \faDatabase\space\space{\bfseries {\firamedium Databases}}
         & {\color{darkgrey} \textbullet\space\space RDS, MongoDB, PostgreSQL, MySQL, CloudSQL, DynamoDB, Redis} & \\[5pt]
     \faCogs\space\space{\bfseries {\firamedium DevOps Tools}}
         & {\color{darkgrey} \textbullet\space\space Bash, Git, Prometheus, Thanos, Grafana, Loki, Tempo, Istio, GitLab CI, Github Actions, NGINX} & \\[2pt]
-        & {\color{darkgrey} \textbullet\space\space Kubernetes, Docker, ArgoCD, Cloudflare, Terraform, Helm, kOps, Teleport, Skaffold, KinD} & \\[5pt]
+        & {\color{darkgrey} \textbullet\space\space Kubernetes, Terraform, ArgoCD, Docker, Cloudflare, Packer, Helm, kOps, Teleport, KinD} & \\[5pt]
     \faLinux\space\space{\bfseries {\firamedium Environments}}
         & {\color{darkgrey} \textbullet\space\space AWS: EC2, EKS, ECS, VPC, IAM, Route53, S3, Lambda, Cloudformation, etc.} & \\[2pt]
         & {\color{darkgrey} \textbullet\space\space Azure: AKS, ABS, DNS, Azure Cache for Redis, etc.} & \\[2pt]
         & {\color{darkgrey} \textbullet\space\space GCP: GKE, KMS, GCS, StackDriver, GCE, Pub-Sub, etc.} & \\[2pt]
     \faBook\space\space{\bfseries {\firamedium Fundamentals}}
-        & {\color{darkgrey} \textbullet\space\space Microservices, GitOps, CI/CD, Serverless Applications, Agile Development} & \\[10pt]
+        & {\color{darkgrey} \textbullet\space\space Cloud, Gitops, Microservices, CI/CD, Serverless Applications, Agile Development} & \\[10pt]
     \end{tabularx}
     %%End%% Programming
     %%Begin%% Experience
@@ -116,12 +116,13 @@
     \textbf{{\firamedium Site Reliability Engineer II at \textit{Mattermost}}}{\color{darkgrey}
     \hfill{\small{May 2022 to May 2023\\[-5pt]}} 
     \begin{tabularx}{\textwidth}{lp{16cm}X} 
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Rearchitected Mattermost production services to be managed in a fully GitOps way with ArgoCD.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Upgraded and maintained select Mattermost services such as Teleport, Cluster Autoscaler, and ArgoCD.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Maintained over 15,000 production Mattermost workspaces within Kubernetes. } & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Rearchitected Mattermost production services to be managed by ArgoCD.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Orchestrated design process to move Mattermost from Calico CNI to AWS VPC CNI.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Utilized Mattermost Operator to deploy workspaces in Kubernetes environments.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Productionalized Mattermost's Community installation to be more reliable, observable, and maintainable.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Maintained over 10,000 production Mattermost installations within Kubernetes. } & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Led discussions on how to turn internal tools to be more cloud-native and host them within Kubernetes environments.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Participated in a weekly on-call rotation to respond to production level alerts and quickly resolve issues.} & \\ [-10pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Led initiatives to convert internal tools to be cloud-native and host them within Kubernetes environments.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Participated in a weekly on-call rotation to respond to production alerts.} & \\ [-10pt]
     \end{tabularx}\\
     }
 
@@ -130,18 +131,19 @@
     \begin{tabularx}{\textwidth}{lp{16cm}X} 
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Planned migration of AWS services to Azure-hosted Kubernetes for all Daylight environments.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Designed architecture and deployment strategies for new Kubernetes environments.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Implemented and supported a new environment for Shoppers Drug Mart Covid-19 testing and vaccination forms to handle heavy load.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Supported Shoppers Drug Mart Covid-19 testing and vaccination forms to handle heavy traffic.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Migrated existing cloudformation troposphere scripts to Terraform to manage all new environments.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Maintained existing, and created new AWS-hosted environments with resources including EC2, ECS, VPC, Route53, Cloudfront services.} & \\ [-10pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Maintained existing, and created new AWS environments using EC2, ECS, VPC, Route53, and Cloudfront.} & \\ [-10pt]
     \end{tabularx}\\
     }
 
     \textbf{{\firamedium DevOps Engineer at \textit{Tulip Retail}}}{\color{darkgrey}
     \hfill{\small{January 2019 to April 2020\\[-5pt]}} 
     \begin{tabularx}{\textwidth}{lp{16cm}X} 
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Designed and built an SFTP Automation Framework leverging AWS services to remove manual configuration.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Built CI/CD frameworks for internal projects and all serverless applications through use of GitLab CI that automatically tests and deploys new changes.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Setup monitoring solution of GCP services leveraging Prometheus, Thanos, Grafana, and Alertmanager.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Developed new metric exporters \& dashboards to receive more granular information around Tulip's internal systems, and configured alerts to warn teams of potential outages across the system.} & \\ [-10pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Set up monitoring solution leveraging Prometheus, Thanos, Grafana, and Alertmanager.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Developed new metric exporters \& dashboards to alert on more metrics around Tulip's internal systems.} & \\ [-10pt]
     \end{tabularx}\\
     }
 
