--- a/Daniel-Wierdsma-Resume.tex
+++ b/Daniel-Wierdsma-Resume.tex
@@ -93,7 +93,7 @@
 
     \begin{tabularx}{\textwidth}{llX}
         \faCogs\space\space{\bfseries {\firamedium DevOps Tools}}
-            & {\color{darkgrey} \textbullet\space\space Bash, Git, Prometheus, Thanos, Grafana, Loki, Tempo, Istio, GitLab CI, Github Actions, NGINX} & \\[2pt]
+            & {\color{darkgrey} \textbullet\space\space Prometheus, Thanos, Grafana, Loki, Tempo, Istio, GitLab CI, Github Actions, NGINX, Bash, Git} & \\[2pt]
             & {\color{darkgrey} \textbullet\space\space Kubernetes, Terraform, ArgoCD, Docker, Cloudflare, Packer, Helm, kOps, Teleport, KinD} & \\[5pt]
         \faLinux\space\space{\bfseries {\firamedium Environments}}
             & {\color{darkgrey} \textbullet\space\space AWS: EC2, EKS, ECS, VPC, IAM, Route53, S3, Lambda, Cloudformation, etc.} & \\[2pt]
@@ -116,13 +116,13 @@
     \textbf{{\firamedium Site Reliability Engineer II at \textit{Mattermost}}}{\color{darkgrey}
     \hfill{\small{May 2022 to May 2023\\[-5pt]}} 
     \begin{tabularx}{\textwidth}{lp{16cm}X} 
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Maintained over 15,000 production Mattermost workspaces within Kubernetes. } & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Maintained over 15,000 production Mattermost workspaces in Kubernetes responsible for \$1.5 million ARR. } & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Rearchitected Mattermost production services to be managed by ArgoCD.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Orchestrated design process to move Mattermost from Calico CNI to AWS VPC CNI.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Utilized Mattermost Operator to deploy workspaces in Kubernetes environments.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Productionalized Mattermost's Community installation to be more reliable, observable, and maintainable.} & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Participated in cost cutting to reduce Mattermost Clouds spending by 40\%.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Led initiatives to convert internal tools to be cloud-native and host them within Kubernetes environments.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Participated in a weekly on-call rotation to respond to production alerts.} & \\ [-10pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Participated in a weekly on-call rotation to triage and resolve issues.} & \\ [-10pt]
     \end{tabularx}\\
     }
 
@@ -133,7 +133,7 @@
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Designed architecture and deployment strategies for new Kubernetes environments.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Supported Shoppers Drug Mart Covid-19 testing and vaccination forms to handle heavy traffic.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Migrated existing cloudformation troposphere scripts to Terraform to manage all new environments.} & \\ [-5pt]
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Maintained existing, and created new AWS environments using EC2, ECS, VPC, Route53, and Cloudfront.} & \\ [-10pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Maintained existing, and created new AWS environments for dedicated and multitenant clients.} & \\ [-10pt]
     \end{tabularx}\\
     }
 
