Add minor changes

--- a/Daniel-Wierdsma-Resume.tex
+++ b/Daniel-Wierdsma-Resume.tex
@@ -116,7 +116,7 @@
     \textbf{{\firamedium Site Reliability Engineer II at \textit{Mattermost}}}{\color{darkgrey}
     \hfill{\small{May 2022 to May 2023\\[-5pt]}} 
     \begin{tabularx}{\textwidth}{lp{16cm}X} 
-        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Maintained over 15,000 production Mattermost workspaces in Kubernetes responsible for \$1.5 million ARR. } & \\ [-5pt]
+        & \color{em-light} \faGenderless\space\space \color{darkgrey}{Maintained over 15,000 production Mattermost workspaces in Kubernetes with 99.5\% uptime. } & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Rearchitected Mattermost production services to be managed by ArgoCD.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Orchestrated design process to move Mattermost from Calico CNI to AWS VPC CNI.} & \\ [-5pt]
         & \color{em-light} \faGenderless\space\space \color{darkgrey}{Utilized Mattermost Operator to deploy workspaces in Kubernetes environments.} & \\ [-5pt]
